applied Eric Meyer css reset
This is the update before "re-styling" will occur.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		<div id="outerWrapper">
 			<div id="contentWrapper">
 				<header>
-					<h1>CAR KARE EXPRESS&trade; </h1>
-					<!--<p>Mobile Automotive Maintenance</p>-->
+					<h1 class="header">CAR KARE EXPRESS&trade; </h1>
 				</header>
 				<nav>
 					<ul>
@@ -36,12 +35,21 @@
 					</ul>
 				</div><!--End of gallery -->
 				<aside>
-					<h4>Popular Amsoil Products</h4>
+					<h3>Amsoil Testimonials</h3>
 					<ul>
-						<li><img src="images/amsoil_brake_fluid.jpg" alt="Amsoil Brake Fluid" id="Amsoil_Brake"><br>Amsoil Brake Fluid</li>
-						<li><img src="images/amsoil_pi.jpg" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
-						<li><img src="images/amsoil_zrod_oil.jpg" alt="Amsoil_Z-Rod Oil" id="Amsoil_Z-Rod_Oil"><br>Amsoil Z-Rod Oil</li>
-						<li><img src="images/amsoil_antifreeze.jpg" alt="Amsoil_Antifreez" id="Amsoil_Antifreez"><br>Amsoil Antifreeze</li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Baxter-Rogers.aspx">AMSOIL ATF Saves Cost of New Tranny - SUV</a></li>
+						<p></p>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Phil-Garner.aspx">‘Rugged’ 1968 Barracuda Logs Nearly 500,000 Miles With AMSOIL - Classic</a></li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Ernie-Berg.aspx">Truck 'Roars to Life' with INJEN Power-Flow Gasoline Intake System - INJEN</a></li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Jason-91-Buick.aspx">AMSOIL Enthusiast - Performance</a></li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Hondo-Police-Department.aspx">The City of Hondo Police Department - Performance</a>
+						</li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Douglas-Oliveira.aspx ">Cold Weather Start - Performance</a>
+						</li>
+						<li><a href="http://www.amsoil.com/testimonials/Automotive/Jack-Costella.aspx">Fashion In Speed - Speed Record - Racing</a>
+						</li>
+						<li><a href="http://www.amsoil.com/testimonials/Trucking/Craig-Hamrick.aspx ">Fire Department Counts on AMSOIL for Performance, Savings - Performance</a>
+						</li>
 					</ul>
 				</aside>
 				<article>
