Updated CSS styles
made week 1 and 2 corrections
upgraded the nav link states
inserted google font face kit
and more...

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Car Kare Express</title>
-	<link href='http://fonts.googleapis.com/css?family=Alegreya+SC:400,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Limelight' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/cssmain.css">
 </head>
 	<body>
@@ -16,11 +16,11 @@
 				<nav>
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Service Levels</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
 						<li><a href="#">FAQ</a></li>
-						<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li>
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="http://www.amsoil.com">Amsoil</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
 				<div id="gallery">
@@ -51,6 +51,7 @@
 						<li><a href="http://www.amsoil.com/testimonials/Trucking/Craig-Hamrick.aspx ">Fire Department Counts on AMSOIL for Performance, Savings - Performance</a>
 						</li>
 					</ul>
+					<p>Testimonials from the Amsoil Website</p>
 				</aside>
 				<article>
 					<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
