changed call to action images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<h3>Amsoil Synthetic Lubricants protect your mechanical parts</h3>
 					<ul>
 						<li><img src="images/amsoil_gear_lube.jpg" alt="Amsoil_Gear_Lube" id="Amsoil_Gear_Lube"></li>
-						<li><img src="images/dsaf.jpg" alt="Amsoil_ZRod" id="Amsoil_ZRod"></li>
+						<li><img src="images/amsoil_zrod.jpg" alt="Amsoil_ZRod" id="Amsoil_ZRod"></li>
 						<li><img src="images/amsoil_pi.jpg" alt="Amsoil_Performance_Improver" id="Amsoil_10W-40_Motor_Oil"></li>
 						<li><img src="images/amsoil_ea_oil_filter.jpg" alt="Amsoil_EA_Oil_Filters" id="Amsoil_Oil_Filters"></li>
 						<li><img src="images/amsoil_antifreeze.jpg" alt="Amsoil_Antifreeze" id="Amsoil_Antifreeze"></li>
@@ -57,10 +57,10 @@
 					<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
 					<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
 					<ul>
-						<li><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
-						<li><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
-						<li><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
-						<li><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
+						<li><img src="images/bronze_package.gif" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
+						<li><img src="images/silver_package.gif" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
+						<li><img src="images/gold_package.gif" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
+						<li><img src="images/platinum_package.gif" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
 					</ul>
 				</article>
 				<section>
