--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<div id="gallery">
 					<h3>Amsoil Synthetic Lubricants protect your mechanical parts</h3>
 					<ul>
-						<li><img src="images/amsoil_gear_lube.jpg" alt="Amsoil_Gear_Lube" id="Amsoil_Gear_Lube"></li>
-						<li><img src="images/amsoil_zrod.jpg" alt="Amsoil_ZRod" id="Amsoil_ZRod"></li>
+						<li><img src="images/amsoil_gear_lube.png" alt="Amsoil_Gear_Lube" id="Amsoil_Gear_Lube"></li>
+						<li><img src="images/amsoil_zrod.png" alt="Amsoil_ZRod" id="Amsoil_ZRod"></li>
 						<li><img src="images/amsoil_pi.jpg" alt="Amsoil_Performance_Improver" id="Amsoil_10W-40_Motor_Oil"></li>
 						<li><img src="images/amsoil_ea_oil_filter.jpg" alt="Amsoil_EA_Oil_Filters" id="Amsoil_Oil_Filters"></li>
 						<li><img src="images/amsoil_antifreeze.jpg" alt="Amsoil_Antifreeze" id="Amsoil_Antifreeze"></li>
