inserted media querries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="outerWrapper">
 			<div id="contentWrapper">
 				<header>
-					<h1 class="header">CAR KARE EXPRESS&trade; </h1>
+					<h1 <!--class="header"-->CAR KARE EXPRESS&trade; </h1>
 				</header>
 				<nav>
 					<ul>
@@ -24,7 +24,7 @@
 					</ul>
 				</nav>
 				<div id="gallery">
-					<h3>Amsoil Synthetic Lubricants protect your mechanical parts</h3>
+					<h3 class="top_text">Amsoil Synthetic Lubricants protect your mechanical parts</h3>
 					<ul>
 						<li><img src="images/amsoil_gear_lube.png" alt="Amsoil_Gear_Lube" id="Amsoil_Gear_Lube"></li>
 						<li><img src="images/amsoil_zrod.png" alt="Amsoil_ZRod" id="Amsoil_ZRod"></li>
@@ -35,7 +35,7 @@
 					</ul>
 				</div><!--End of gallery -->
 				<aside>
-					<h3>Amsoil Testimonials</h3>
+					<h3 class="top_text">Amsoil Testimonials</h3>
 					<ul>
 						<li><a href="http://www.amsoil.com/testimonials/Automotive/Baxter-Rogers.aspx">AMSOIL ATF Saves Cost of New Tranny - SUV</a></li>
 						<li><a href="http://www.amsoil.com/testimonials/Automotive/Phil-Garner.aspx">‘Rugged’ 1968 Barracuda Logs Nearly 500,000 Miles With AMSOIL - Classic</a></li>
@@ -50,10 +50,10 @@
 						<li><a href="http://www.amsoil.com/testimonials/Trucking/Craig-Hamrick.aspx ">Fire Department Counts on AMSOIL for Performance, Savings - Performance</a>
 						</li>
 					</ul>
-					<p>Testimonials from the Amsoil Website</p>
+					<p>* Testimonials from the Amsoil Website</p>
 				</aside>
 				<article>
-					<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
+					<h2 class="top_text">Experience the Car Kare Express difference with onsite maintenance</h2>
 					<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
 					<ul>
 						<li><img src="images/bronze_package.gif" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
@@ -63,7 +63,7 @@
 					</ul>
 				</article>
 				<section>
-					<h3>Put an end to waiting at the repair shop</h3>
+					<h3 class="top_text">Put an end to waiting at the repair shop</h3>
 					<p> We take the hassle out of servicing your vehicle by bringing the service bay to you. Our On-Site maintenance technicians are able to meet you at work,
 					the salon, or at home. <br>Almost any situation that keeps you away from your vehicle is an opportune time to get it serviced by us. Just think of the time you 
 					can save!!! <br>You can schedule a multitude of services to be performed on your vehicle and not have to ask the boss for time off. Time that you won't get paid for
@@ -75,7 +75,7 @@
 					all passenger, commercial and racing applications.
 				</section>
 				<footer>
-					<h3>Car Kare Express &trade;</h3>
+					<h3 class="top_text">Car Kare Express &trade;</h3>
 					<table>
 						<tr>
 						<th>A subsidiary of </th>
@@ -102,11 +102,6 @@
 							<td><em><a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor.</td>
 						</tr>
 					</table>
-				<!--<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
-				<p>All rights reserved</p>
-				<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
-				<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p> -->
-
 				</footer><!--End of footer -->
 			</div><!--End of contentWrapper -->
 		</div><!--End of outerWrapper -->
