modified margins and media querries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<div id="outerWrapper">
 			<div id="contentWrapper">
 				<header>
-					<h1 <!--class="header"-->CAR KARE EXPRESS&trade; </h1>
 				</header>
 				<nav>
 					<ul>
@@ -102,8 +101,12 @@
 							<td><em><a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor.</td>
 						</tr>
 					</table>
-				</footer><!--End of footer -->
-			</div><!--End of contentWrapper -->
-		</div><!--End of outerWrapper -->
-	</body><!-- End of body-->
+				</footer>
+				<!--End of footer -->
+			</div>
+			<!--End of contentWrapper -->
+		</div>
+		<!--End of outerWrapper -->
+	</body>
+	<!-- End of body-->
 </html>
