changes from friday night

--- a/index.html
+++ b/index.html
@@ -103,10 +103,15 @@
 					</table>
 				</footer>
 				<!--End of footer -->
+				
 			</div>
 			<!--End of contentWrapper -->
 		</div>
 		<!--End of outerWrapper -->
+		<div class="clear-fix">
+				</div>
+				<!--End of clear-fix -->
+				</div>
 	</body>
 	<!-- End of body-->
 </html>
