adjusted margins on elements

--- a/index.html
+++ b/index.html
@@ -101,12 +101,8 @@
 							<td><em><a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor.</td>
 						</tr>
 					</table>
-				</footer>
-				<!--End of footer -->
-			</div>
-			<!--End of contentWrapper -->
-		</div>
-		<!--End of outerWrapper -->
-	</body>
-	<!-- End of body-->
+				</footer><!--End of footer -->
+			</div><!--End of contentWrapper -->
+		</div><!--End of outerWrapper -->
+	</body><!-- End of body-->
 </html>
