more margin and the clear fix edit

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 					Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
 					all passenger, commercial and racing applications.
 				</section>
+				<div id="clear-fix">
+				</div>
+				<!-- End of Clear-Fix -->
 				<footer>
 					<h3 class="top_text">Car Kare Express &trade;</h3>
 					<table>
