week four with media querries
did not complete all the querries
took out colors for layout sizes
could not get padding to use %s properly so kept ems

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div id="outerWrapper">
 			<div id="contentWrapper">
 				<header>
+					<h1 <!--class="header"-->CAR KARE EXPRESS&trade; </h1>
 				</header>
 				<nav>
 					<ul>
@@ -73,9 +74,6 @@
 					Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
 					all passenger, commercial and racing applications.
 				</section>
-				<div id="clear-fix">
-				</div>
-				<!-- End of Clear-Fix -->
 				<footer>
 					<h3 class="top_text">Car Kare Express &trade;</h3>
 					<table>
